Fix navbar togoller not showing in mobile and tablet (#285)

--- a/static/css/layouts/main.css
+++ b/static/css/layouts/main.css
@@ -249,10 +249,6 @@ a.header-anchor code {
   color: #e83e8c;
 }
 
-.navbar-toggler {
-  display: none;
-}
-
 .content ul > ol,
 .content ol > ul,
 .content ul > ul,
